# OLMoEDroid

./: README.md  build.gradle.kts  gradle.properties  local.properties  settings.gradle.kts
app/: build.gradle.kts  gradle.properties  olmoe-release-key.jks
app/release/: output-metadata.json
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llama-mmap.cpp  llama_jni.cpp  version.script
app/src/main/cpp/ggml-cpu/amx/: amx.h
app/src/main/java/com/allenai/olmoe/: MainActivity.kt  OLMoEApplication.kt
app/src/main/java/com/allenai/olmoe/data/dao/: ChatDao.kt
app/src/main/java/com/allenai/olmoe/data/database/: AppDatabase.kt
app/src/main/java/com/allenai/olmoe/data/model/: Chat.kt  InferenceMetrics.kt
app/src/main/java/com/allenai/olmoe/data/repository/: ChatRepository.kt
app/src/main/java/com/allenai/olmoe/di/: AppModule.kt
app/src/main/java/com/allenai/olmoe/domain/model/: AppConstants.kt  LLM.kt  LLMNative.kt  Template.kt
app/src/main/java/com/allenai/olmoe/domain/usecase/: ModelDownloadUseCase.kt
app/src/main/java/com/allenai/olmoe/presentation/viewmodel/: ChatViewModel.kt
app/src/main/java/com/allenai/olmoe/ui/components/: ChatBubble.kt  MessageInput.kt  MetricsView.kt  ModelDownloadView.kt
app/src/main/java/com/allenai/olmoe/ui/screens/: MainScreen.kt
app/src/main/java/com/allenai/olmoe/ui/theme/: Theme.kt  Type.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/mipmap-xxhdpi/: ic_launcher.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml  network_security_config.xml
